WIP on diversions bug, new data version including more spring 2025 closures