@@ -55,8 +55,9 @@ class RouteMapperTest {
 
         List<Station> results = mapper.getStationsOn(fromAirportRoute, false, ManAirport.getId());
 
-        assertEquals(ManAirport.getId(), results.get(0).getId());
-        assertEquals(Victoria.getId(), results.get(results.size()-1).getId());
+        assertEquals(ManAirport.getId(), results.getFirst().getId());
+        // Vic -> Corn, Spring 2025 Closures
+        assertEquals(Deansgate.getId(), results.getLast().getId());
 
     }
 
